--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Css/practica.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Rama Main</h1>
+    <h1>Practica 1405</h1>
 
-    <h3>Marcelo</h3>
+    <div>
+        <a href="#" id="clickMe">Clickme</a>
+        <a href="https://www.google.com" id="goToGoogle">Ir a Google</a>
+        <input type="text" id="textInput">
+    </div>
 
-    <h4>as</h4>
+
 </body>
+
 </html>
